[clean]・ちょっとリファクタ
