# src/main/java/com/example/kawasakirestapi/domain/service/item/ItemService.java
@@ -1,6 +1,9 @@
 package com.example.kawasakirestapi.domain.service.item;
 
-import com.example.kawasakirestapi.application.exception.Item.*;
+import com.example.kawasakirestapi.application.exception.Item.ImageNotFoundException;
+import com.example.kawasakirestapi.application.exception.Item.ItemImageException;
+import com.example.kawasakirestapi.application.exception.Item.ItemNotFoundException;
+import com.example.kawasakirestapi.application.exception.Item.SearchResultNotFoundException;
 import com.example.kawasakirestapi.domain.repository.item.ItemRepository;
 import com.example.kawasakirestapi.infrastructure.entity.item.Item;
 import lombok.RequiredArgsConstructor;
@@ -14,11 +17,8 @@ import org.springframework.http.*;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
-import javax.imageio.ImageIO;
-import java.awt.image.BufferedImage;
 import java.io.ByteArrayInputStream;
 import java.io.File;
-import java.io.IOException;
 import java.io.InputStream;
 import java.net.URLConnection;
 import java.util.List;
@@ -43,35 +43,46 @@ public class ItemService {
     private final ResourceLoader resourceLoader;
 
     /**
-     * 全ての商品の取得
-     * @return 全ての商品をListで返す
+     * 商品全権取得
+     *
+     * @return 商品情報全権
      */
     public List<Item> findAll() {
         return itemRepository.findAll();
     }
 
     /**
-     * 商品を保存する
-     * @param item 保存する商品
-     * @return データベースに保存した商品情報を返す
+     * 商品1件取得
+     * @param id 商品ID
+     * @return 商品情報1件
      */
-    public Item save(Item item){
-
-        Item newItem = new Item();
-        newItem.setTitle(item.getTitle());
-        newItem.setDescription(item.getDescription());
-        newItem.setPrice(item.getPrice());
-
-        return itemRepository.save(newItem);
+    public Optional<Item> findOneById(Long id) {
+        return itemRepository.findById(id);
     }
 
     /**
-     * 商品を編集して保存する
-     * @param item 編集後の商品
-     * @param id 編集する商品のid
+     * 保存処理
+     *
+     * @param item 保存する商品
+     * @return Item
+     */
+    public Item save(Item item){
+
+        Item Item = new Item();
+        Item.setTitle(item.getTitle());
+        Item.setDescription(item.getDescription());
+        Item.setPrice(item.getPrice());
+
+        return itemRepository.save(Item);
+    }
+
+    /**
+     * 商品更新
+     * @param item 編集後の商品情報1件
+     * @param id 商品ID
      * @return  編集した商品情報を保存して、データベースに更新した情報を返す
      */
-    public Item update(Item item, long id) {
+    public Item update(Item item, Long id) {
         Item updateItem = findOneById(id).orElseThrow(() ->new ItemNotFoundException("対象の商品が存在しません"));
         updateItem.setTitle(item.getTitle());
         updateItem.setDescription(item.getDescription());
@@ -81,7 +92,7 @@ public class ItemService {
     }
 
     /**
-     * 商品情報を削除する
+     * 商品削除
      * @param id 削除する商品のid
      */
     public void deleteById(Long id) {
@@ -89,14 +100,6 @@ public class ItemService {
         itemRepository.delete(item);
     }
 
-    /**
-     * idから商品情報を取得
-     * @param id 取得する商品のid
-     * @return 取得した商品情報を返す
-     */
-    public Optional<Item> findOneById(Long id) {
-        return itemRepository.findById(id);
-    }
 
     /**
      * 商品に紐づく画像ファイルを削除
@@ -123,27 +126,29 @@ public class ItemService {
      * 画像が正しい形式でない場合、例外処理
      *
      * @param id 商品id         Long
-     * @param uploadImage MultipartFile
+     * @param multipartFile MultipartFile
      * @return item       Item
      */
     public Item uploadImageItem(
             Long id,
-            MultipartFile uploadImage) {
+            MultipartFile multipartFile) {
 
-        try (InputStream image = uploadImage.getInputStream()){
-            BufferedImage bufferedImage = ImageIO.read(image);
-            if (bufferedImage == null) {
-                throw new InvalidImageFileException("投稿が画像データではない、もしくは画像が添付されておりません");
-            }
-        } catch (IOException e)   {
-            throw new InvalidImageFileException("投稿が画像データではない、もしくは画像が添付されておりません");
-        }
+//        try (InputStream image = uploadImage.getInputStream()){
+//            BufferedImage bufferedImage = ImageIO.read(image);
+//            if (bufferedImage == null) {
+//                throw new InvalidImageFileException("投稿が画像データではない、もしくは画像が添付されておりません");
+//            }
+//        } catch (IOException e)   {
+//            throw new InvalidImageFileException("投稿が画像データではない、もしくは画像が添付されておりません");
+//        }
 
+        // 商品を取得
         Item item = findOneById(id).orElseThrow(() -> new ItemNotFoundException("対象の商品が存在しません"));
+
         // 画像のファイル名の文字数取得
-        int number = uploadImage.getOriginalFilename().lastIndexOf(".");
+        int number = multipartFile.getOriginalFilename().lastIndexOf(".");
         // 画像の拡張子取得
-        String ext = uploadImage.getOriginalFilename().substring(number);
+        String ext = multipartFile.getOriginalFilename().substring(number);
         // 画像名再設定
         String fileName = id + "_" + getRandomId() + ext;
         // ディレクトリ作成
@@ -153,16 +158,18 @@ public class ItemService {
 
         try {
             // 配置したファイルに書き込む
-            uploadImage.transferTo(uploadPath);
+            multipartFile.transferTo(uploadPath);
             String imagePath = localImagesPath + "/" + fileName;
             item.setImagePath(imagePath);
 
             return itemRepository.save(item);
         } catch (Exception e) {
 
-            throw new ImageNotUploadedException("画像のアップロードに失敗しました", e);
+            throw new ItemImageException("画像のアップロードに失敗しました", e);
         }
     }
+
+
 
     /**
      * 画像配置するディレクトリの作成
@@ -241,18 +248,18 @@ public class ItemService {
 
 
     /**
-     * 商品の検索。
+     * 商品検索。
      * 検索結果がない場合は空の配列を返す
      *
-     * @param searchword 検索キーワード
-     * @return itemList List<Item> 条件に一致した商品情報をListで返す
+     * @param keyword 検索キーワード
+     * @return  条件に一致した商品情報をListで返す
      */
-    public List<Item> searchItem(String searchword) {
+    public List<Item> search(String keyword) {
 
-        if (searchword.isEmpty()) {
+        if (keyword.isEmpty()) {
             throw new SearchResultNotFoundException("ステータスコード200です。検索結果が見つかりませんでした。");
         }
-        return itemRepository.findByTitleContaining(searchword);
+        return itemRepository.findByTitleContaining(keyword);
     }
 
 }
